# dnamite

./: .readthedocs.yml  README.md  loss_fns.py  models.py  paper.bib  paper.md  pyproject.toml  sa_transformer.py  synthetic_data_experiments.ipynb  utils.py
.github/workflows/: draft-pdf.yml
analysis/: get_calibration_curves.ipynb  get_calibration_curves_survival.ipynb  get_metrics.ipynb  get_metrics_survival.ipynb  get_shape_functions.ipynb  get_shape_functions_survival.ipynb
dnamite/: paper.md
dnamite/datasets/: __init__.py  data_loaders.py  paper.bib
dnamite/loss_fns/: __init__.py  loss_fns.py
dnamite/models/: __init__.py  base_model.py  base_single_split.py  binary_classifier.py  drsa.py  (+8 more)
docs/: requirements.txt
examples/: cat_feats.ipynb  feature_selection_example.ipynb  sparsity.ipynb  synthetic_data_experiments.ipynb
joss_paper/: paper.md
models/: coxnam.py  dnamite.py  drsa.py  dys.py  models_old.py  nam.py  pseudonam.py  sa_transformer.py
run_scripts/: epoch_functions.py  loss_fns.py  run_all.py  run_all_binary.py  run_all_feature_selection.py  run_all_feature_selection_survival.py  run_all_survival.py  run_cox.py  run_coxnam.py  run_dnamite.py  run_dnamite_binary.py  run_dnamite_binary_feature_selection.py  run_dnamite_survival.py  run_dnamite_survival_feature_selection.py  run_drsa.py  run_dys.py  run_ebm_binary.py  run_ebm_survival.py  run_nam_binary.py  run_nam_binary_feature_selection.py  run_pseudonam.py  run_sa_transformer.py  run_xgboost_binary.py
tests/: test_dnamite_binary_clf.py  test_dnamite_regression.py  test_dnamite_survival.py
(+24 files in other folders)
